k8s/03-linkerd-zero-trust/smiley-canary.yaml
---
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: smiley-canary
  namespace: faces
spec:
  parentRefs:
    - name: smiley
      kind: Service
      group: core
      port: 80
  rules:
    - backendRefs:
      - name: smiley
        port: 80
        weight: 50
      - name: smiley2
        port: 80
        weight: 50
