k8s/03-linkerd-zero-trust/allow-emissary.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-inbound
  namespace: faces
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: faces-front-end
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: emissary-ingress
