k8s/03-linkerd-zero-trust/allow-face-to-back-end.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-face-to-back-end
  namespace: faces
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: faces-back-end
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: face-workload
