k8s/03-linkerd-zero-trust/allow-viz.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-viz
  namespace: faces
spec:
  targetRef:
    kind: Namespace
    name: faces
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: viz-apps
